# doomaker

./: .gitignore  Cargo.toml  Credits.md  Design.md  README.md  doom64_textures.csv
.github/workflows/: rust.yml
assets/: icons.xcf  line.frag  line.vert  ptrlock.xcf  ptrlock2.xcf
doom-wad/: Cargo.toml
doom-wad/examples/texbrowse/: Cargo.toml  simple.frag  simple.vert
doom-wad/examples/texbrowse/src/: camera.rs  main.rs  renderer.rs  texture_browser_window.rs  window.rs
doom-wad/examples/texbrowse/src/custom_widgets/: mod.rs  tex.rs  tex_name.rs
doom-wad/src/: lib.rs  util.rs
doom-wad/src/map/: console.rs  lumps.rs  mod.rs
doom-wad/src/map/tests/: the_bronze_room.rs
doom-wad/src/res/: flat.rs  graphic.rs  image.rs  mod.rs  playpal.rs  textures.rs
doom-wad/src/res/image/: blending.rs
doom-wad/src/wad/: lump_name.rs  mod.rs  util.rs
doom-wad/tests/: basics.rs  doommaptocsv.py  maps.rs  pngtoraw.py
doom-wad/tests/data/: BLITBACK.raw  BLITFOR2.raw  BLITFORE.raw  BLITRESU.raw  BLITRSU2.raw  CYBRE1.lmp  CYBRE1.raw  GRATE.raw  INCOMPLE.flt  MOSSBRK8.raw  PLAYPAL.pal  PLAYPAL1.pal  PNAMES.lmp  SHTGC0.lmp  SHTGC0.raw  TEXTURE1.lmp  TLITE6_5.flt  TSWGB0.lmp  TSWGB0.raw  blittest.xcf  credits.csv  d64skytestmap.txt  the bronze room.wad
doom64-hash/: Cargo.toml
doom64-hash/c_src/: CMakeLists.txt  doom64hash.c
doom64-hash/src/: lib.rs  main.rs
editor/: Cargo.toml
editor/src/: glue.rs  lib.rs  main.rs  property.rs  sample_data.rs  util.rs  velocity.rs
editor/src/data/: mod.rs  property.rs
editor/src/readmap/: mod.rs
map-to-3D/: Cargo.toml  holey.stl
map-to-3D/examples/: holey.rs
map-to-3D/src/: attributes.rs  boundingbox.rs  edge.rs  lib.rs  plane.rs  secplane.rs  sectorpolygonbuilder.rs  segment.rs  util.rs  vector.rs  vertex.rs  wall.rs
map-to-3D/src/sectorpolygonbuilder/: angle.rs  tests.rs  util.rs  vertex.rs  wasm.rs
map-to-3D/src/sectorpolygonbuilder/tests/: core.rs  data.rs  harder.rs  holey.rs  incomplete.rs  insides.rs  mod.rs  simple.rs
map-to-3D/tests/data/: harder.xcf  holey.xcf  incomplete.xcf  insides.xcf  simple.xcf
movearound/: Cargo.toml  simple.frag  simple.vert
movearound/src/: camera.rs  debugs.rs  input.rs  main.rs  matrix_debug.rs  renderer.rs  util.rs  window.rs
parsers/: Cargo.toml
parsers/src/: lib.rs  udmf.rs
parsers/src/pest-grammars/: common.pest  udmf.pest
parsers/src/udmf/: input.rs
parsers/src/udmf/input/: newtypes.rs
parsers/tests/: basic_textmap.txt  basic_udmf_map.wad  udmf.rs
src/: edge.rs  lib.rs  main.rs  secplane.rs  sectorpolygonbuilder.rs  vector.rs  vertex.rs
