[package]
name = "doom-wad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ahash = "0.7.6"
png = {version = "0.17.5", optional = true}
derive_deref = "1.1.1"
image = "0.24.2"

[features]
# Support for Doom console port map data structures
default = ["png"]
console = []
