[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
macroquad = "0.3.16"
egui-macroquad = "0.11.0"
egui = "0.18.0"
doom-wad = {path = "../doom-wad"}
map-to-3D = {path = "../map-to-3D"}
anyhow = "1.0.56"
glam = "0.14.0"
