[package]
name = "map-to-3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.7.6"
cfg-if = "1.0.0"
micromath = {version = "2.0.0", optional = true}
earcutr = "0.2.0"
fixed = "1.19.0"
glam = "0.14.0"
derive_deref = "1.1.1"

[features]
default = [ "micromath" ]
