[package]
name = "movearound"
version = "0.1.0"
authors = ["Kevin Caccamo <kevin@ciinet.org>"]
edition = "2021"

[dependencies]
ahash = "0.8.0"
glam = "0.21.3"
glow = "0.11.2"
glutin = "0.29.1"
egui = "0.19.0"
png = "0.17.5"
egui_glow = {version = "0.19.0", features=["winit", "clipboard", "links"]}
