[package]
name = "movearound"
version = "0.1.0"
authors = ["Kevin Caccamo <kevin@ciinet.org>"]
edition = "2021"

[dependencies]
ahash = "0.8.0"
egui = "0.19.0"
egui_glow = { version = "0.19.0", features=["winit", "clipboard", "links"] }
glam = "0.21.3"
glow = "0.11.2"
glutin = { version = "0.29.1", features=["serde"] }
png = "0.17.5"
serde = { version = "1.0.144", features=["derive"] }
serde_yaml = "0.9.10"
