[package]
name = "texbrowse"
version = "0.1.0"
authors = ["Kevin Caccamo <kevin@ciinet.org>"]
edition = "2021"

[dependencies]
glam = "0.20.5"
glow = "0.11.2"
glutin = "0.28.0"
egui = "0.18.1"
futures = "0.3.28"
png = "0.17.5"
regex = "1.5.6"
lazy_static = "1.4.0"
egui_glow = {version = "0.18.0", features=["winit"]}
doom-wad = {path = "../../"}
